# qni-core-c

./: CMakeLists.txt  NOTICE.md
api/: CMakeLists.txt
include/: qni-alloc.h  qni-command.h  qni-connector-context.h  qni-console-context.h
include/impls/: qni-hashmap.h
src/: CMakeLists.txt  qni-alloc.c  qni-command.c  qni-connector-context.c  qni-console-context.c
src/impls/: qni-hashmap.c
